# project-euler-workspace

./: Cargo.toml  readme.md
project_euler_tests_1_100/: Cargo.toml
project_euler_tests_1_100/src/: lib.rs
project_euler_tests_1_50/: Cargo.toml
project_euler_tests_1_50/src/: lib.rs  notes.md
project_main/: Cargo.toml
project_main/src/: main.rs
src/: main.rs
